--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,10 @@
 body{
     margin: 0px;
     padding: 0px;
-    font-family: "Bangers"
+    font-family: "Bangers";
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden; 
 }
 
 .navbar{
@@ -58,8 +61,8 @@ ul{
 
 li{
     font-size: 150%;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 50px;
+    margin-right: 50px;
     padding-top: 30px;
 }
 
@@ -77,26 +80,3 @@ a{
 }
 
 
-/*
-#map {
-  height: 100%;
-}
-/* Optional: Makes the sample page fill the window. 
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-#floating-panel {
-  position: absolute;
-  top: 10px;
-  left: 25%;
-  z-index: 5;
-  background-color: #fff;
-  padding: 5px;
-  border: 1px solid #999;
-  text-align: center;
-  font-family: 'Roboto','sans-serif';
-  line-height: 30px;
-  padding-left: 10px;
-*/
