--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ body, html {
 .parallax2 {
  
   background-image: url('/assets/images/cliff.jpg');
-  height: 100%; 
+  height: 50%; 
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -109,7 +109,7 @@ body, html {
 .parallax3 {
  
   background-image: url('/assets/images/japan.jpg');
-  height: 100%; 
+  height: 50%; 
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -118,7 +118,57 @@ body, html {
 }
 
 .scroll{
-    height:1000px;
-    background-color:red;
-    font-size:36px;
+    height:500px;
+    background-color:slategrey;
+    font-size:20px;
+    text-align:center;
+    padding-top: 5%;
+    
+}
+
+.scroll2{
+    height:500px;
+    background-color:slategrey;
+    font-size:20px;
+    text-align:center;
+}
+
+.scroll3{
+    height:500px;
+    background-color:slategrey;
+    font-size:20px;
+    text-align:center;
+}
+
+
+.footer{
+    background-color: orange;
+    height: 100px;
+    text-align: center;
+    padding: 0px;
+}
+
+ul{
+    list-style-type: none;
+    display: inline-flex;
+    padding-left: 0px;
+}
+
+li{
+    font-size: 150%;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding-top: 30px;
+}
+
+#flag img{
+    height:150px;
+    width:300px;
+}
+
+#map{
+    height:430px;
+    margin-left: 20px;
+    margin-right: 20px;
+
 }
