--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,87 +1,12 @@
-/*@import url('https://fonts.googleapis.com/css?family=Bangers|Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Merriweather&display=swap');
 
-body{
-    margin: 0px;
-    padding: 0px;
-    font-family: "Bangers";
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden; 
-}
 
-.navbar{
-    background-color: orange;
-}
-
-.introduction{
-    height: 60vh;
-    background-color: blue;
-}
-
-.countries{
-    background-color: pink;
-    height: 60vh;
-}
-
-.map{
-    padding: 0px;
-}
-
-#map{
-    height: 60vh;
-}
-
-.extra{
-    background-color: red;
-    height: 20vh;
-}
-
-.transport{
-    background-color: orange;
-    height: 300px;
-}
-
-.travel{
-    background-color: green;
-    height: 300px;
-}
-
-.footer{
-    background-color: orange;
-    height: 100px;
-    text-align: center;
-    padding: 0px;
-}
-
-ul{
-    list-style-type: none;
-    display: inline-flex;
-    padding-left: 0px;
-}
-
-li{
-    font-size: 150%;
-    margin-left: 50px;
-    margin-right: 50px;
-    padding-top: 30px;
-}
-
-p{
-    font-size: 30px;
-}
-
-a{
-    color: black;
-}
-
-#flag img{
-    height:100px;
-    width:200px;
-    
-}*/
 
 body, html {
   height: 100%;
+  margin: 0px;
+  padding: 0px;
+  font-family: "Merriweather";
 }
 
 .parallax {
@@ -168,7 +93,7 @@ li{
 
 #map{
     height:430px;
-    margin-left: 20px;
-    margin-right: 20px;
-
+    margin-left: 30px;
+    margin-right: 30px;
 }
+
