--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Merriweather&display=swap');
 
 
-
+/*-----------------------------------------------------------------images+main content sections-----------------------------------------------------*/
 body, html {
   height: 100%;
   margin: 0px;
@@ -65,7 +65,7 @@ body, html {
     font-size:20px;
     text-align:center;
 }
-
+/*-----------------------------------------------------------------components-----------------------------------------------------------------------------------*/
 
 .footer{
     background-color: orange;
@@ -91,6 +91,7 @@ li{
     height:150px;
     width:300px;
     margin-bottom: 2%;
+    margin-top: 3%
 }
 
 #map{
@@ -98,7 +99,7 @@ li{
     margin-left: 30px;
     margin-right: 30px;
 }
-
+/*--------------------------------------------------------------------sliders---------------------------------------------------------------------------------*/
 #totop{
     color: red;
 }
@@ -108,15 +109,24 @@ li{
     transition: color 0.5s ease-in-out;
 }
 
-#tobottom{
+#tobottom2{
     color: green;
 }
 
-#tobottom:hover{
+#tobottom2:hover{
     color: red;
     transition: color 0.5s ease-in-out;
 }
 
 #bottom{
     margin-top: 2%;
+}
+
+#tomap{
+    color: green;
+}
+
+#tomap:hover{
+    color: red;
+    transition: color 0.5s ease-in-out;
 }
